Improve NOT support in AND simplification engine